bugfix: activated overflow in v16 container

--- a/serv/website/css/site.975fe7.css
+++ b/serv/website/css/site.975fe7.css
@@ -420,7 +420,7 @@
 .v16 {
  display:inline-block;
  vertical-align:top;
- overflow:hidden
+ /* overflow:hidden */
 }
 .ps23 {
  position:relative;
